# CC-OshiAlerm-for-Twitch

./: LICENSE  README.en.md  README.md  package-lock.json  package.json  vitest.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/languages/: en.json5  ja.json5
src-tauri/src/: constants.rs  lib.rs  main.rs
src-tauri/src/commands/: config.rs  mod.rs  resource.rs  system.rs  twitch.rs
src-tauri/src/models/: channel.rs  config.rs  mod.rs
src-tauri/src/services/: action_executor.rs  config_manager.rs  mod.rs  tray_manager.rs  twitch_service.rs
src-tauri/src/utils/: i18n.rs  logger.rs  mod.rs  path.rs
src-tauri/themes/: dark.json5  light.json5
src/components/MainWindow/: AlarmControls.css  AlarmControls.tsx  MainWindow.css  StreamerItem.css  StreamerItem.tsx  StreamerList.tsx  index.ts  index.tsx
src/components/Settings/: AlarmSettings.tsx  ApiSettings.tsx  GeneralSettings.tsx  Settings.css  StreamerSettings.tsx  index.tsx
src/contexts/: ConfigContext.tsx  LanguageContext.tsx  ThemeContext.tsx  index.ts
src/hooks/: index.ts  useAlarm.ts
src/services/: audioService.ts  index.ts  tauriCommands.ts
src/test/: StreamerItem.test.tsx  setup.ts
src/types/: config.ts  index.ts  language.ts  theme.ts
