[package]
name = "cc-oshialerm-for-twitch"
version = "0.1.0"
description = "Twitch Stream Alarm - Get notified when your favorite streamers go live"
authors = ["goriu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cc_oshialerm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "test"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"

# Async & HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Utils
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
lazy_static = "1.5"

